<<<<<<< HEAD
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TEClinica</string>
    <string name="menu_settings">Configuracion</string>
    <string name="map">Mapa</string>
    <string name="services">Servicios</string>
    <string name="tab">&quot;    &quot;</string>
    <string name="name">Nombre:</string>
    <string name="description">Descripción:</string>
    <string name="date">Fecha:</string>
    <string name="time">Hora:</string>
    <string name="name_example">Nombre de la actividad</string>
    <string name="description_example">Descripcion de la actividad</string>
    <string name="time_example">5:45pm</string>
    <string name="date_example">dd/mm/aaaa</string>
    <string name="add_btn">Agregar Cita</string>
    <string name="dialog_message_delete">¿Desea Borrar esta actividad?</string>
    <string name="schedule">Agenda</string>
    <string name="appointment_toast_message">Debe agregar una cita primero desde el menu.</string>
    <string name="positive">Aceptar</string>
    <string name="negative">Cancelar</string>
    <string name="menu_add_appointment">Agregar Cita</string>
    <string name="delete_appointment">Borrar Cita</string>
    <string name="appointment_toast_form_error_fields">Debe de llenar todos los campos</string>
    <string name="appointment_toast_form_accept">Cita agregada a la Agenda</string>
    <string name="contact">Contacto</string>
    <string name="takeappointment">Sacar Cita</string>
    <string name="emergency_call">Emergency Call</string>
    

=======
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TEClinica</string>
    <string name="menu_settings">Configuration</string>
    <string name="map">Map</string>
    <string name="services">Services</string>
    <string name="tab">&quot;    &quot;</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="name_example">Activity Name</string>
    <string name="description_example">Activity Description</string>
    <string name="time_example">5:45pm</string>
    <string name="date_example">dd/mm/aaaa</string>
    <string name="add_btn">Add Appointment</string>
    <string name="dialog_message_delete">Delete this Activity?</string>
    <string name="schedule">Schedule</string>
    <string name="appointment_toast_message">Add an appointment from the menu.</string>
    <string name="positive">Accept</string>
    <string name="negative">Cancel</string>
    <string name="menu_add_appointment">Add Appointment</string>
    <string name="delete_appointment">Delete Appointment</string>
    <string name="appointment_toast_form_error_fields">Fill all filds</string>
    <string name="appointment_toast_form_accept">Appointment added</string>
    <string name="contact">Contact</string>
    <string name="emergency_call">Emergency Call</string>

>>>>>>> bb7cee147a6bdddbb6b5fd9bac767d729f30b6a8
</resources>